--- a/Samples/Advanced custom field/Views/Partials/FormEditor/FieldsSync/my.range.cshtml
+++ b/Samples/Advanced custom field/Views/Partials/FormEditor/FieldsSync/my.range.cshtml
@@ -1,4 +1,4 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<My.Range.MyRangeField>
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<My.Fields.MyRangeField>
 <div class="form-group @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="range" id="@Model.FormSafeName" name="@Model.FormSafeName" value="@Model.SubmittedValue" min="@Model.Minimum" max="@Model.Maximum" step="@Model.Step" @(Model.Mandatory ? "required" : null) />
