--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.email.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.email.cshtml
@@ -1,7 +1,7 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.EmailField>
 <div class="form-group @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
-  <input type="email" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" multiple="@Model.Multiple" @(Model.Mandatory ? "required" : null) />
+  <input type="email" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" placeholder="@Model.Placeholder" ng-model="formData.@Model.FormSafeName" multiple="@Model.Multiple" @(Model.Mandatory ? "required" : null) />
 
   @Html.Partial("FormEditor/FieldsAsync/core.utils.helptext")
   @Html.Partial("FormEditor/FieldsAsync/core.utils.validationerror")
