--- a/Source/Umbraco/Views/FormEditorAsync.cshtml
+++ b/Source/Umbraco/Views/FormEditorAsync.cshtml
@@ -17,30 +17,51 @@
   <link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.min.css" />
 </head>
 <body ng-app="formEditor">
-  <form ng-controller="FormController" name="form" novalidate>
+  <form ng-controller="FormController" name="form" novalidate ng-cloak>
     <div class="container">
-      @foreach (var row in form.Rows)
+      @foreach(var page in form.Pages)
       {
-        <div class="row @row.Alias">
-          @foreach (var cell in row.Cells)
+        <fieldset ng-show="isActivePage(@(form.Pages.IndexOf(page)))">
+          @* if the form does not have paging enabled, the page title is null or empty*@
+          @if(page.Title.IsNullOrWhiteSpace() == false)
           {
-            <div class="cell @cell.Alias">
-              @foreach (var field in cell.Fields)
+            <legend>@page.Title</legend>
+          }
+          @foreach(var row in page.Rows)
+          {
+            <div class="row @row.Alias">
+              @foreach(var cell in row.Cells)
               {
-                // insert the form validation result container above the submit button if one exists
-                if (field.Type == "core.submitbutton" && validationErrorsContainerAdded == false)
-                {
-                  validationErrorsContainerAdded = true;
-                  @AddValidationErrorsContainer(form);
-                }
-                // render the form field with a partial view 
-                // - the view is expected to be located at /Views/Partials/FormEditor/FieldsAsync/[field type].cshtml, e.g. /Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
-                @Html.Partial(string.Format(@"FormEditor/FieldsAsync/{0}", field.Type), field)
+                <div class="cell @cell.Alias">
+                  @foreach(var field in cell.Fields)
+                  {
+                    // insert the form validation result container above the submit button if one exists
+                    if(field.Type == "core.submitbutton" && validationErrorsContainerAdded == false)
+                    {
+                      validationErrorsContainerAdded = true;
+                      @AddValidationErrorsContainer(form);
+                    }
+                    // render the form field with a partial view
+                    // - the view is expected to be located at /Views/Partials/FormEditor/FieldsAsync/[field type].cshtml, e.g. /Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
+                    @Html.Partial(string.Format(@"FormEditor/FieldsAsync/{0}", field.Type), field)
+                  }
+                </div>
               }
             </div>
           }
-        </div>
+        </fieldset>
       }
+      @* paging buttons *@
+      <div class="row">
+        <div class="cell col-md-12">
+          <a class="btn btn-default" ng-click="goToPreviousPage()" ng-hide="isFirstPage()">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.previous"), "Previous")
+          </a>
+          <a class="btn btn-default" ng-click="goToNextPage()" ng-hide="isLastPage()">
+            @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.next"), "Next") <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          </a>
+        </div>
+      </div>
       @{
         // if the form validation result container has not been added while rendering the submit button, add it as a row below the entire form
         if (validationErrorsContainerAdded == false)
@@ -85,6 +106,11 @@
       the Umbraco ID of the content to where the form should be submitted to
     *@
     var _formId = @Model.Content.Id;
+
+    @*
+      the total number of form pages
+    *@
+    var _formTotalPages = @form.Pages.Count();
   </script>
 
 </body>
