--- a/Source/Umbraco/Views/FormEditorSync.cshtml
+++ b/Source/Umbraco/Views/FormEditorSync.cshtml
@@ -24,28 +24,49 @@
 <body>
   <form method="POST" enctype="multipart/form-data" novalidate>
     <div class="container">
-      @foreach (var row in form.Rows)
+      @foreach(var page in form.Pages)
       {
-        <div class="row @row.Alias">
-          @foreach (var cell in row.Cells)
+        <fieldset class="form-page" style="@(page == form.Pages.First() ? null : "display:none;")">
+          @* if the form does not have pages enabled, the page title is null or empty*@
+          @if(page.Title.IsNullOrWhiteSpace() == false)
           {
-            <div class="cell @cell.Alias">
-              @foreach (var field in cell.Fields)
+            <legend>@page.Title</legend>
+          }
+          @foreach(var row in page.Rows)
+          {
+            <div class="row @row.Alias">
+              @foreach(var cell in row.Cells)
               {
-                // insert the form validation result container above the submit button if one exists
-                if (field.Type == "core.submitbutton" && validationErrorsContainerAdded == false)
-                {
-                  validationErrorsContainerAdded = true;
-                  @AddValidationErrorsContainer(form);
-                }
-                // render the form field with a partial view 
-                // - the view is expected to be located at /Views/Partials/FormEditor/FieldsSync/[field type].cshtml, e.g. /Views/Partials/FormEditor/FieldsSync/core.checkbox.cshtml
-                @Html.Partial(string.Format(@"FormEditor/FieldsSync/{0}", field.Type), field)
+                <div class="cell @cell.Alias">
+                  @foreach(var field in cell.Fields)
+                  {
+                    // insert the form validation result container above the submit button if one exists
+                    if(field.Type == "core.submitbutton" && validationErrorsContainerAdded == false)
+                    {
+                      validationErrorsContainerAdded = true;
+                      @AddValidationErrorsContainer(form);
+                    }
+                    // render the form field with a partial view
+                    // - the view is expected to be located at /Views/Partials/FormEditor/FieldsSync/[field type].cshtml, e.g. /Views/Partials/FormEditor/FieldsSync/core.checkbox.cshtml
+                    @Html.Partial(string.Format(@"FormEditor/FieldsSync/{0}", field.Type), field)
+                  }
+                </div>
               }
             </div>
           }
-        </div>
+        </fieldset>
       }
+      @* paging buttons *@
+      <div class="row">
+        <div class="cell col-md-12">
+          <a class="btn btn-default form-btn-previous" style="display: none">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.previous"), "Previous")
+          </a>
+          <a class="btn btn-default form-btn-next" style="display: none">
+            @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.next"), "Next") <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          </a>
+        </div>
+      </div>
       @{
         // if the form validation result container has not been added while rendering the submit button, add it as a row below the entire form
         if (validationErrorsContainerAdded == false)
@@ -57,7 +78,7 @@
           </div>
         }
       }
-    </div>
+</div>
   </form>
 
   @* include jQuery *@
@@ -72,6 +93,11 @@
       render the form validations as an array of JSON objects
     *@
     var _formValidations = @form.Validations.Render();
+
+    @*
+      the total number of form pages
+    *@
+    var _formTotalPages = @form.Pages.Count();
   </script>
 </body>
 </html>
