Improve texts for empty pages (or empty forms)

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -230,9 +230,20 @@
     }
   }
 
-  .drop-target-empty {
+  .no-form-pages, .no-form-rows {
     text-align: center;
+    padding: 10px;
+    i {
+      display: block;
+    }
+    i:hover small {
+      color: @dimmedColorActive;
+    }
   }
+  .no-form-rows {
+    padding-top: 0;
+  }
+
 }
 
 .form-editor-edit-field {
