Make the h5's a little more visible

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -305,6 +305,10 @@
 
 .form-editor, .form-editor-edit-field, .form-editor-picker, .form-editor-config, .form-editor-data, .form-editor-data-entry {
 
+  h5 {
+    color: #343434;
+  }
+
   h4, h5 {
     &.expandable {
       cursor: pointer;
