Move expandable sections to tabs

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -244,6 +244,16 @@
     padding-top: 0;
   }
 
+  .tab-pane {
+    display: none;
+    &.active {
+      display: block;
+    }
+  }
+
+  .nav-tabs {
+    margin-bottom: 10px;
+  }
 }
 
 .form-editor-edit-field {
