--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -251,8 +251,27 @@
     }
   }
 
-  .nav-tabs {
+  ul.tabs {
+    text-transform: uppercase;
     margin-bottom: 10px;
+    border-bottom: 1px solid @cellBorderColorActive;
+    li {
+        margin-bottom: -1px;
+        display: inline-block;
+        a, a.active, a:hover, a:focus {
+            text-decoration: none;
+            padding: 5px;
+            border: 0;
+            background: none;
+        }
+        &:hover {
+            border-bottom: 2px solid @cellBorderColorActive;
+        }
+        &.active {
+            font-weight: bold;
+            border-bottom: 2px solid black;
+        }
+    }
   }
 }
 
