Bit if clean-up and fancyness

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -265,6 +265,7 @@
             background: none;
         }
         &:hover {
+            transition: 0.3s ease;
             border-bottom: 2px solid @cellBorderColorActive;
         }
         &.active {
