One too many parentheses in templates

--- a/Source/Umbraco/Views/FormEditorSync.cshtml
+++ b/Source/Umbraco/Views/FormEditorSync.cshtml
@@ -24,7 +24,7 @@
     <div class="container">
       <h2>@form.ReceiptHeader</h2>
       <p>
-        @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(form.ReceiptBody ?? string.Empty)))
+        @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(form.ReceiptBody ?? string.Empty))
       </p>
     </div>
   }
