--- a/Source/Umbraco/Views/FormEditorAsync.cshtml
+++ b/Source/Umbraco/Views/FormEditorAsync.cshtml
@@ -21,7 +21,7 @@
     <div class="container" ng-show="showReceipt">
       <h2>@form.ReceiptHeader</h2>
       <p>
-        @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(form.ReceiptBody ?? string.Empty)))
+        @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(form.ReceiptBody ?? string.Empty))
       </p>
     </div>
 
