--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -195,6 +195,7 @@
       float: none;
       display: block;
       padding: 0;
+      width: auto;
     }
   }
 
@@ -391,6 +392,11 @@
   small {
     text-transform: uppercase;
     font-size: 12px;
+
+    &.help-text {
+      text-transform: none;
+      padding-top: 2px;
+    }
   }
 }
 
