Adjust styles for 7.4

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -45,7 +45,6 @@
           }
 
           th {
-            font-size: 13px;
             font-weight: bold;
             text-transform: uppercase;
             padding-left: 2px;
@@ -335,6 +334,7 @@
 
   h5 {
     color: @fontColor;
+    font-size: inherit;
   }
 
   h4, h5 {
@@ -342,7 +342,7 @@
       cursor: pointer;
 
       i {
-        vertical-align: middle;
+        vertical-align: text-top;
 
         &.icon-delete {
           float: right;
