#22 - use field name, not pretty name

--- a/Source/Umbraco/Views/Partials/FormEditor/Email/EmailTemplateSample.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Email/EmailTemplateSample.cshtml
@@ -74,7 +74,7 @@
         @foreach (var field in Model.AllValueFields())
         {
           <tr>
-            <th>@field.PrettyName</th>
+            <th>@field.Name</th>
             <td>@field.SubmittedValueForEmail()</td>
           </tr>
         }
