--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -307,8 +307,9 @@
   }
 
   div.imageField {
+    margin-bottom: 10px; 
     .umb-mediapicker .add-link, .thumbnail {
-      width: 300px;
+      width: 330px;
     }
 
     * {
