Add info box on member info field

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -317,6 +317,17 @@
       display: inline-block;
     }
   }
+
+  div.infoBox {
+    i {
+      display: inline-block;
+      vertical-align: top;
+    }
+    div.infoText {
+      display: inline-block;
+      width: 90%;
+    }
+  }
 }
 
 .form-editor-edit-field, .form-editor-picker {
