--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.memberinfo.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.memberinfo.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.MemberInfoField>
-
 @*
-  for now there's nothing to render here - it's all handled server side
+  render a hidden field to indicate whether or not a member is logged in, so we can use client side validations based on member login status
 *@
+<input type="hidden" name="@Model.FormSafeName" value="@(Model.IsMemberLoggedIn ? "true" : null)"/>
