--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -89,17 +89,6 @@
         }
       }
     }
-
-    &.success-page {
-
-      i {
-        vertical-align: text-top;
-
-        &.icon-delete {
-          margin-left: 4px !important;
-        }
-      }
-    }
   }
 
   table {
@@ -367,6 +356,19 @@
           color: @dimmedColorActive;
         }
       } 
+    }
+  }
+
+  ul {
+    &.page-selector {
+
+      i {
+        vertical-align: text-top;
+
+        &.icon-delete {
+          margin-left: 4px !important;
+        }
+      }
     }
   }
 
