Add help text and update config styling for 7.4

--- a/Source/Umbraco/Plugin/css/form.less
+++ b/Source/Umbraco/Plugin/css/form.less
@@ -546,6 +546,7 @@
     label {
       width: 70px;
       vertical-align: top;
+      display: inline-block;
     }
 
     div.cell-configuration {
