--- a/Source/Umbraco/Views/FormEditorSync.cshtml
+++ b/Source/Umbraco/Views/FormEditorSync.cshtml
@@ -2,7 +2,7 @@
 @{
   Layout = null;
   
-  @* if the content being rendered does not containt the form property, pass the applicable content like this *@
+  @* if the content being rendered does not contain the form property, pass the applicable content like this *@
   // ViewBag.FormContent = myInstanceOfIPublishedContent;
 
   @* if your form property is not called "form" on the content type, pass the property name like this *@
@@ -17,7 +17,7 @@
 <body>
   
   @* render the form *@
-  @Html.Partial("FormEditor/Sync");
+  @Html.Partial("FormEditor/Sync", Umbraco.AssignedContentItem);
 
   @* include jQuery *@
   <script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
