--- a/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Sync.cshtml
@@ -13,7 +13,7 @@
   
   // handle form submission if this is a postback
   // - this will also take care of redirecting to the success page (if configured)
-  var formWasSubmitted = form.CollectSubmittedValues();
+  var formWasSubmitted = form.CollectSubmittedValues(formContent);
 
   // show the receipt if the form was submitted and we have a receipt message
   var showReceiptMessage = formWasSubmitted && string.IsNullOrWhiteSpace(form.ReceiptHeader) == false;
