Improve paged forms client side validation
It is no longer possible to go to the next page in a paginated form, if
the current page contains validation errors (not counting cross field
validations)

--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkboxgroup.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkboxgroup.cshtml
@@ -5,7 +5,7 @@
   {
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-checked="hasMultiSelectValue('@Model.FormSafeName', '@HttpUtility.JavaScriptStringEncode(fieldValue.Value)')" ng-click="toggleMultiSelectValue('@Model.FormSafeName', '@fieldValue.Value', @Model.Mandatory.ToString().ToLowerInvariant())" />
+        <input type="checkbox" ng-checked="hasMultiSelectValue('@Model.FormSafeName', '@HttpUtility.JavaScriptStringEncode(fieldValue.Value)')" ng-click="toggleMultiSelectValue('@Model.FormSafeName', @ViewBag.FormEditorPageNumber, '@fieldValue.Value', @Model.Mandatory.ToString().ToLowerInvariant())" />
         @fieldValue.Value
       </label>
     </div>
