--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.utils.validationerror.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.utils.validationerror.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.IFieldWithValidation>
-<div class="text-danger validation-error hide" ng-class="{show: form.$submitted && form.@(Model.FormSafeName).$invalid}">
+<div class="text-danger validation-error hide" ng-class="{show: shouldShowValidationError('@(Model.FormSafeName)', @(ViewBag.FormEditorPageNumber))}">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   @Model.ErrorMessage
 </div>
