--- a/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/Async.cshtml
@@ -13,12 +13,12 @@
   // get the form model (named "form" on the content type)
   var form = formContent.GetPropertyValue<FormModel>(formPropertyName);  
 }
-<div ng-app="formEditor">
+<div ng-app="formEditor" ng-controller="FormController" ng-cloak>
   @* only render the form if we can actually submit to it *@
   @if(form.MaxSubmissionsExceeded() == false)
   {
     @* render the receipt message *@
-    <div class="container form-receipt" ng-cloak ng-show="showReceipt">
+    <div class="container form-receipt" ng-show="showReceipt">
       <h2>@form.ReceiptHeader</h2>
       <p>
         @Html.Raw(Umbraco.ReplaceLineBreaksForHtml(form.ReceiptBody ?? string.Empty))
@@ -26,12 +26,12 @@
     </div>
 
     @* render the form *@
-    <form ng-controller="FormController" name="form" novalidate ng-cloak ng-hide="showReceipt">
-      <div class="container form-data">
-        @* NOTE: if you're not using form pages, you can access all form rows directly with form.Rows *@
+    <div class="container form-data" ng-hide="showReceipt">
+      <form name="form" novalidate>
         @foreach(var page in form.Pages)
         {
-          <div class="form-page" ng-show="isActivePage(@(form.Pages.IndexOf(page)))">
+          ViewBag.FormEditorPageNumber = form.Pages.IndexOf(page);
+          <div class="form-page" ng-show="isActivePage(@(ViewBag.FormEditorPageNumber))" ng-form="formPage@(ViewBag.FormEditorPageNumber)">
             @foreach(var row in page.Rows)
             {
               <div class="row @row.Alias">
@@ -50,43 +50,39 @@
             }
           </div>
         }
-        @* paging links *@
-        <nav>
-          <ul class="pager">
-            <li class="previous" ng-hide="isFirstPage()">
-              <a href ng-click="goToPreviousPage()">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.previous"), "Previous")
-              </a>
-            </li>
-            <li class="next" ng-hide="isLastPage()">
-              <a href ng-click="goToNextPage()">
-                @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.next"), "Next") <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-        @* form validation errors container (for cross field validations) *@
-        <div class="row form-validation-errors">
-          <div class="cell">
-            <div class="form-group">
-              <div id="validationErrors" class="alert alert-danger hide" ng-class="{show: invalidValidations.length > 0}">
-                <h4>
-                  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                  @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.validationerrors.header"), "Form contains errors")
-                </h4>
-                <ul id="validationErrorsList">
-                  <li ng-repeat="validation in invalidValidations">{{validation.errorMessage}}</li>
-                </ul>
-              </div>
+      </form>
+      @* paging links *@
+      <nav>
+        <ul class="pager">
+          <li class="previous" ng-hide="isFirstPage()">
+            <a href ng-click="goToPreviousPage()">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.previous"), "Previous")
+            </a>
+          </li>
+          <li class="next" ng-hide="isLastPage()">
+            <a href ng-click="goToNextPage()">
+              @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.paging.next"), "Next") <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      @* form validation errors container (for cross field validations) *@
+      <div class="row form-validation-errors">
+        <div class="cell">
+          <div class="form-group">
+            <div id="validationErrors" class="alert alert-danger hide" ng-class="{show: invalidValidations.length > 0}">
+              <h4>
+                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                @Umbraco.Coalesce(Umbraco.GetDictionaryValue("form.validationerrors.header"), "Form contains errors")
+              </h4>
+              <ul id="validationErrorsList">
+                <li ng-repeat="validation in invalidValidations">{{validation.errorMessage}}</li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
-
-      @* add this if you want a live view of the form data *@
-      @*<hr/>
-        <pre>{{formData}}</pre>*@
-    </form>
+    </div>
 
     @* this script section sets up state for the JS and thus needs to be a part of the template *@
     <script type="text/javascript">
