--- a/Source/Umbraco/Views/FormEditorAsync.cshtml
+++ b/Source/Umbraco/Views/FormEditorAsync.cshtml
@@ -40,13 +40,13 @@
 </head>
 <body>
   
-  @* render the form *@
+  @* step 1: render the form with the Async partial *@
   @Html.Partial("FormEditor/Async", Umbraco.AssignedContentItem);  
 
-  @* include AngularJS *@
+  @* step 2: include AngularJS *@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 
-  @* include Form Editor script for asynchronous postback (using AngularJS) *@
+  @* step 3: include Form Editor script for asynchronous postback (using AngularJS) *@
   <script src="/JS/FormEditor/FormEditorAsync.js" type="text/javascript"></script>
 
 </body>
